--- a/assignments/lesson-10/gallery.html
+++ b/assignments/lesson-10/gallery.html
@@ -26,6 +26,7 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
+                <li><a href="../index.html">Assignment Listing Page</a></li>
                 <li><a href="index.html">  Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
@@ -54,7 +55,7 @@
                     <figcaption></figcaption> 
                 </figure>      
                 <figure class="fig5">
-                    <img src="images/marko-blazevic-313835-unsplash.jpg" alt="">
+                    <img src="images/marko-blazevic-313835-unsplash.jpg" alt="sun over sunflower field">
                     <figcaption>Photo by Marko Blaxevic on Unsplash</figcaption> 
                 </figure>
                 <figure class="fig6">
