--- a/assignments/lesson-10/index.html
+++ b/assignments/lesson-10/index.html
@@ -30,12 +30,13 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li class="menuHome"><a class="active" href="../../index.html">  Home</a></li>
-                <li class="menuPreston"><a href="preston.html">Preston</a></li>
-                <li class="menuSodaSprings"><a href="#">Soda Springs</a></li>
-                <li class="menuFishHaven"><a href="#">Fish Haven</a></li>
-                <li class="menuStormCenter"><a href="storm-center.html">Storm Center</a></li>
-                <li class="menuGallery"><a href="gallery.html">Gallery</a></li>  
+                <li><a href="../index.html">Assignment Listing Page</a></li>z
+                <li><a class="active" href="../../index.html">  Home</a></li>
+                <li><a href="preston.html">Preston</a></li>
+                <li><a href="#">Soda Springs</a></li>
+                <li><a href="#">Fish Haven</a></li>
+                <li><a href="storm-center.html">Storm Center</a></li>
+                <li><a href="gallery.html">Gallery</a></li>  
             </ul>
         </nav>
 
