--- a/assignments/lesson-10/preston.html
+++ b/assignments/lesson-10/preston.html
@@ -20,7 +20,7 @@
     <body onLoad="currentDate()">
         <!-- Specific to mobile devices -->
         <header class="clearfix heading">
-            <img id="homeTown" src="images/WeekendWeatherImage.jpg" alt="beach">
+            <img id="homeTown" src="images/WeekendWeatherImage.jpg" alt="aurora borealis">
             <h1 class="siteHeading" style="color: #e7ecef">Weekend Warrior Weather</h1>
             <div class="motto"> "Climate is what we expect, weather is what we get." - Mark Twain</div>
         </header>
@@ -29,20 +29,21 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li class="menuHome"><a href="index.html">  Home</a></li>
-                <li class="menuPreston"><a class="active" href="#">Preston</a></li>
-                <li class="menuSodaSprings"><a href="#">Soda Springs</a></li>
-                <li class="menuFishHaven"><a href="#">Fish Haven</a></li>
-                <li class="menuStormCenter"><a href="storm-center.html">Storm Center</a></li>
-                <li class="menuGallery"><a href="gallery.html">Gallery</a></li>  
+                <li><a href="../index.html">Assignment Listing Page</a></li>
+                <li><a href="index.html">  Home</a></li>
+                <li><a class="active" href="#">Preston</a></li>
+                <li><a href="#">Soda Springs</a></li>
+                <li><a href="#">Fish Haven</a></li>
+                <li><a href="storm-center.html">Storm Center</a></li>
+                <li><a href="gallery.html">Gallery</a></li>  
             </ul>
         </nav>
 
         <main>
-            <h1>Preston, Idaho</h1>
+            <h2>Preston, Idaho</h2>
             <hr>
 
-                <img class="backgroundImage" src="images/Preston200.jpg" alt="country living" sizes="50vw" srcset="images/Preston500.jpg 500w, images/Preston800.jpg 800w, images/Preston1100.jpg 1100w">
+                <img class="backgroundImage" src="images/Preston200.jpg" alt="green field with mountains and clouds in background" sizes="50vw" srcset="images/Preston500.jpg 500w, images/Preston800.jpg 800w, images/Preston1100.jpg 1100w">
   
                 <div class="format weatherSummaryBox">
                     <div class=townDiv>Weather Summary</div>
@@ -60,17 +61,16 @@
                         <div id="low"></div>
                     <div></div>
                 </div>
-            </picture>
  
+  <!-- ** Weather Information Contact for Full-size computer screens and laptops only. ** -->
             <div id="weather5Day" class="weather5Day">
+                    <h3>5 Day Forecast</h3>
 
-               <!-- ** Weather Information Contact for Full-size computer screens and laptops only. ** -->
- 
-                <h1>5 Day Forecast</h1>
                 <section id="dayForecast">
+
                     
                 </section>
-
+            </div>
                  <br>
                  <br>
 
@@ -79,12 +79,12 @@
                 <!-- Article informaiton is applied here with image etc.-->
                 <article>
                     <div class="section3">
-                        <h3>Storm in brewing on the East Coast</h3>
+                        <h4>Storm in brewing on the East Coast</h4>
                         <div>
                         <img id="imageArticle" src="images/pexels-photo-753619.jpg" alt="Blowing and drifting snow on roadway" />
 
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. </p>
-                        <p>Occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</p>
+                        <p>Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words. </p>
+                        <p>Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.</p>
                         </div>
                     </div>
                 </article>
