--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
                 <li>Lesson 9: <a href="assignments/lesson-9/practice-w9/hawaii.html">-1: JSon Practice</a></li>
                 <li>Lesson 9: <a href="assignments/lesson-9/index.html">-2: Town JSON Data  </a></li>
                 <li>Lesson 10: <a href="assignments/lesson-10/index.html"> -1: Usability Discussion Board</a></li>
+                <li>Lesson 10: <a href="assignments/lesson-10/preston.html">-2: Weather API Assignment</a></li>
             </ul>
         </main>
         
