--- a/assignments/lesson-10/index.html
+++ b/assignments/lesson-10/index.html
@@ -30,8 +30,8 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li><a href="../index.html">Assignment Listing Page</a></li>z
-                <li><a class="active" href="../../index.html">  Home</a></li>
+                <li><a href="../../index.html">Assignment Listing Page</a></li>z
+                <li><a class="active" href="#">  Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
                 <li><a href="#">Fish Haven</a></li>
