--- a/assignments/lesson-10/preston.html
+++ b/assignments/lesson-10/preston.html
@@ -29,7 +29,7 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li><a href="../index.html">Assignment Listing Page</a></li>
+                <li><a href="../../index.html">Assignment Listing Page</a></li>
                 <li><a href="index.html">  Home</a></li>
                 <li><a class="active" href="#">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
