--- a/assignments/lesson-10/index.html
+++ b/assignments/lesson-10/index.html
@@ -9,9 +9,9 @@
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
 
         <!-- This is the link to the CSS file that will be used to format the css files-->
-        <link href="styles/small-8.css" type="text/css" rel="stylesheet" />
-        <link href="styles/medium-8.css" type="text/css" rel="stylesheet" />
-        <link href="styles/large-8.css" type="text/css" rel="stylesheet" />
+        <link href="styles/small-10.css" type="text/css" rel="stylesheet" />
+        <link href="styles/medium-10.css" type="text/css" rel="stylesheet" />
+        <link href="styles/large-10.css" type="text/css" rel="stylesheet" />
 
         <!-- This is the link to the icon imagees used. -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,7 +30,7 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li><a href="../../index.html">Assignment Listing Page</a></li>z
+                <li><a href="../../index.html">Assignment Listing Page</a></li>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
                 <li><a href="#">Soda Springs</a></li>
