--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
                 <li>Lesson 9: <a href="assignments/lesson-9/index.html">-2: Town JSON Data  </a></li>
                 <li>Lesson 10: <a href="assignments/lesson-10/index.html"> -1: Usability Discussion Board</a></li>
                 <li>Lesson 10: <a href="assignments/lesson-10/preston.html">-2: Weather API Assignment</a></li>
+                <li>Lesson 11: <a href="assignments/weathersite/index.html">Weather Site</a></li>
             </ul>
         </main>
         
