--- a/assignments/weathersite/index.html
+++ b/assignments/weathersite/index.html
@@ -33,8 +33,8 @@
                 <li><a href="../../index.html">Assignment Listing Page</a></li>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="sodaSprings.html">Soda Springs</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>  
             </ul>
