--- a/assignments/weathersite/fishHaven.html
+++ b/assignments/weathersite/fishHaven.html
@@ -33,7 +33,7 @@
                 <li><a href="index.html">  Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
-                <li><a class="active" href="fishHaven.html">Fish Haven</a></li>
+                <li><a class="active" href="#">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>  
             </ul>
