--- a/assignments/weathersite/preston.html
+++ b/assignments/weathersite/preston.html
@@ -32,8 +32,8 @@
                 <li><a href="../../index.html">Assignment Listing Page</a></li>
                 <li><a href="index.html">  Home</a></li>
                 <li><a class="active" href="#">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="sodaSprings.html">Soda Springs</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>  
             </ul>
@@ -79,7 +79,7 @@
                 <!-- Article informaiton is applied here with image etc.-->
                 <article>
                     <div class="section3">
-                        <h4>Storm in brewing on the East Coast</h4>
+                        <h4>Storm brewing on the East Coast</h4>
                         <div>
                         <img id="imageArticle" src="images/pexels-photo-753619.jpg" alt="Blowing and drifting snow on roadway" />
 
