--- a/assignments/weathersite/sodaSprings.html
+++ b/assignments/weathersite/sodaSprings.html
@@ -31,16 +31,16 @@
             <ul id="menuCenter" class="hide">
                 <li><a href="../../index.html">Assignment Listing Page</a></li>
                 <li><a href="index.html">  Home</a></li>
-                <li><a class="active" href="#">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="preston.html">Preston</a></li>
+                <li><a class="active" href="#">Soda Springs</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>  
             </ul>
         </nav>
 
         <main>
-            <h2>Preston, Idaho</h2>
+            <h2>Soda Springs, Idaho</h2>
             <hr>
 
                 <img class="backgroundImage" src="images/Preston200.jpg" alt="green field with mountains and clouds in background" sizes="50vw" srcset="images/Preston500.jpg 500w, images/Preston800.jpg 800w, images/Preston1100.jpg 1100w">
