--- a/assignments/weathersite/index.html
+++ b/assignments/weathersite/index.html
@@ -30,7 +30,6 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li><a href="../../index.html">Assignment Listing Page</a></li>
                 <li><a class="active" href="#">Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
@@ -43,6 +42,15 @@
         <main>
             <section id="townName">
             </section>
+<br>
+<hr>
+<br>
+            <div>
+                <img class="imgIndex" src="images/dan-cook-580155-unsplash.jpg" alt="snowplow" >
+                <h2>Record snow across Idaho</h2>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus cumque soluta voluptates pariatur possimus, officiis incidunt. Accusantium, voluptatibus quis harum totam et enim magnam! Iusto pariatur qui suscipit vel iure. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, omnis debitis fugit vero accusamus tempore tempora rerum repellendus odit ducimus dolores mollitia quisquam iusto necessitatibus ea beatae numquam consequuntur ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, voluptate distinctio! Iste accusamus temporibus velit molestiae saepe, ex possimus dolor. Exercitationem accusantium error quod est tenetur, saepe neque eligendi ducimus!</p>
+                <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Necessitatibus cumque soluta voluptates pariatur possimus, officiis incidunt. Accusantium, voluptatibus quis harum totam et enim magnam! Iusto pariatur qui suscipit vel iure. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quod, omnis debitis fugit vero accusamus tempore tempora rerum repellendus odit ducimus dolores mollitia quisquam iusto necessitatibus ea beatae numquam consequuntur ex. Lorem ipsum dolor sit amet consectetur adipisicing elit. Odit, voluptate distinctio! Iste accusamus temporibus velit molestiae saepe, ex possimus dolor. Exercitationem accusantium error quod est tenetur, saepe neque eligendi ducimus!</p>
+            </div>
         </main>
 
         <address  onLoad="currentDate()" >
