--- a/assignments/weathersite/storm-center.html
+++ b/assignments/weathersite/storm-center.html
@@ -30,8 +30,8 @@
             <ul id="menuCenter" class="hide">
                 <li><a href="index.html">  Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="sodaSprings.html">Soda Springs</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a class="active" href="#">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>  
             </ul>
