--- a/assignments/weathersite/thanks.html
+++ b/assignments/weathersite/thanks.html
@@ -29,15 +29,15 @@
             <ul id="menuCenter" class="hide">
                 <li><a href="index.html">  Home</a></li>
                 <li><a href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
+                <li><a href="sodaSprings.html">Soda Springs</a></li>
+                <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
                 <li><a href="gallery.html">Gallery</a></li>  
             </ul>
         </nav>
 
         <main>
-        <h2 id="thankYou">Thank you for submitting your weather report. </h2>
+        <h2 id="thankYou"> Thank you for submitting your weather report. </h2>
         </main>
 
         <address >
