--- a/assignments/weathersite/gallery.html
+++ b/assignments/weathersite/gallery.html
@@ -31,7 +31,8 @@
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
                 <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
-                <li><a class="active" href="#">Gallery</a></li>  
+                <li><a class="active" href="#">Gallery</a></li>
+                <li><a href="References.html">References</a></li>     
             </ul>
         </nav>
 
@@ -54,7 +55,7 @@
                     <figcaption></figcaption> 
                 </figure>      
                 <figure class="fig5">
-                    <img src="images/marko-blazevic-313835-unsplash.jpg" alt="sun over sunflower field">
+                    <img src="https://unsplash.com/photos/GFFGe2eGmiM">
                     <figcaption>Photo by Marko Blaxevic on Unsplash</figcaption> 
                 </figure>
                 <figure class="fig6">
