--- a/assignments/weathersite/storm-center.html
+++ b/assignments/weathersite/storm-center.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Weekend Warrior Weather</title>
+        <title>Weekend Warrior Weather - Storm Center Submission</title>
 
         <!-- This the normalize.css file link that must be first before any other links!-->
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
@@ -33,7 +33,8 @@
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
                 <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a class="active" href="#">Storm Center</a></li>
-                <li><a href="gallery.html">Gallery</a></li>  
+                <li><a href="gallery.html">Gallery</a></li> 
+                <li><a href="References.html">References</a></li>    
             </ul>
         </nav>
 
