--- a/assignments/weathersite/fishHaven.html
+++ b/assignments/weathersite/fishHaven.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Weekend Warrior Weather</title>
+        <title>Weekend Warrior Weather - Fish Haven</title>
 
         <!-- This the normalize.css file link that must be first before any other links!-->
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
@@ -34,7 +34,8 @@
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
                 <li><a class="active" href="#">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
-                <li><a href="gallery.html">Gallery</a></li>  
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="References.html">References</a></li>                   
             </ul>
         </nav>
 
@@ -78,12 +79,19 @@
                 <!-- Article informaiton is applied here with image etc.-->
                 <article>
                     <div class="section3">
-                        <h4>Storm in brewing on the East Coast</h4>
+                        <h4>Little Fish Haven, Idaho, is paradise for residents</h4>
+                        <h5>By: Kurt Friedemann</h5>
+                        <h6>Idaho State Journal</h6>
                         <div>
                         <img id="imageArticle" src="images/pexels-photo-753619.jpg" alt="Blowing and drifting snow on roadway" />
 
-                        <p>Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words. </p>
-                        <p>Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.</p>
+                        <p>FISH HAVEN, Idaho — It's an undiscovered paradise. Most people who drive by recognize the raw beauty of a place ringed by high desert mountains and bordered by the shores of a vast natural lake.</p>
+                        <p>In winter the hills outside this small paradise echo with the sharp whine of snow machines and in the summer thousands of tourists ply the lake's bright blue waters with water skis or fishing poles.</p>
+                        <p><a href="https://www.deseretnews.com/article/800677/Little-Fish-Haven-Idaho-is-paradise-for-residents.html">read the full article in the Idaho State Journal.</a></p>
+
+                                
+                                
+                                </p>
                         </div>
                     </div>
                 </article>
