--- a/assignments/weathersite/sodaSprings.html
+++ b/assignments/weathersite/sodaSprings.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Weekend Warrior Weather</title>
+        <title>Weekend Warrior Weather - Soda Springs</title>
 
         <!-- This the normalize.css file link that must be first before any other links!-->
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
@@ -34,7 +34,8 @@
                 <li><a class="active" href="#"> Soda Springs</a></li>
                 <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
-                <li><a href="gallery.html">Gallery</a></li>  
+                <li><a href="gallery.html">Gallery</a></li> 
+                <li><a href="References.html">References</a></li>    
             </ul>
         </nav>
 
@@ -78,12 +79,16 @@
                 <!-- Article informaiton is applied here with image etc.-->
                 <article>
                     <div class="section3">
-                        <h4>Storm in brewing on the East Coast</h4>
+                        <h4>Soda Springs school district avoids fraud scam</h4>
+                        <h5>By: Staff Writer</h5>
+                        <h6><a href="https://www.localnews8.com/news/education/soda-springs-school-district-avoids-fraud-scam/994602748">KIDK 3/ KIFI / KXPI</a></h6>
                         <div>
                         <img id="imageArticle" src="images/pexels-photo-753619.jpg" alt="Blowing and drifting snow on roadway" />
-
-                        <p>Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words. </p>
-                        <p>Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.Contents of articles that should be talking about weather, but instead is just filler text that is made up to absorb the white space. I wish I had more creative power and time on my hands to fill the complete article up with complete nonsense and words.</p>
+                        <p>SODA SPRINGS, Idaho (KIFI/KIDK) - The Soda Springs School District reports it was targeted by a fraud similar to that which victimized the Teton School District in December.</p>
+                        <p>Like Teton, the Soda Springs District is working with Headwaters Construction to build its Tigert Middle School gym and classroom additions.</p>
+                        <p>Soda Springs personnel followed established protocol and did not wire any money and no Soda Springs funds were compromised. The district is now working with local law enforcement and the FBI.</p>
+                        <p>Much like the Teton School District, District 150 received an e-mail on December 11, 2018 from what appeared to be a clerk from Headwaters Construction. The email requested the district to change its established payment practice of mailing monthly payment checks and switch to an electronic wire transfer.</p>
+                        <p><a href="https://www.localnews8.com/news/education/soda-springs-school-district-avoids-fraud-scam/994602748">read full article ... at local news 8.com</a></p>
                         </div>
                     </div>
                 </article>
