--- a/assignments/weathersite/thanks.html
+++ b/assignments/weathersite/thanks.html
@@ -32,7 +32,8 @@
                 <li><a href="sodaSprings.html">Soda Springs</a></li>
                 <li><a href="fishHaven.html">Fish Haven</a></li>
                 <li><a href="storm-center.html">Storm Center</a></li>
-                <li><a href="gallery.html">Gallery</a></li>  
+                <li><a href="gallery.html">Gallery</a></li>
+                <li><a href="References.html">References</a></li>     
             </ul>
         </nav>
 
