--- a/assignments/weathersite/fishHaven.html
+++ b/assignments/weathersite/fishHaven.html
@@ -43,7 +43,7 @@
             <h2>Fish Haven, Idaho</h2>
             <hr>
 
-                <img class="backgroundImage" src="images/Preston200.jpg" alt="green field with mountains and clouds in background" sizes="50vw" srcset="images/Preston500.jpg 500w, images/Preston800.jpg 800w, images/Preston1100.jpg 1100w">
+                <img class="backgroundImage" src="images/FishHaven_Page_evening-567840_400.jpg" alt="reflection of sky on lake" sizes="50vw" srcset="images/FishHaven_Page_evening-567840_400.jpg 400w, images/FishHaven_Page_evening-567840_600.jpg 600w, images/FishHaven_Page_evening-567840_1100.jpg 1100w">
   
                 <div class="format weatherSummaryBox">
                     <div class=townDiv>Weather Summary</div>
@@ -82,13 +82,11 @@
                         <h4>Little Fish Haven, Idaho, is paradise for residents</h4>
                         <h5>By: Kurt Friedemann</h5>
                         <h6>Idaho State Journal</h6>
-                        <div>
-                        <img id="imageArticle" src="images/pexels-photo-753619.jpg" alt="Blowing and drifting snow on roadway" />
+                        <img id="imageArticle" src="images/FishHaven_landscape-1802337_1920.jpg" alt="lake in the evening as sun is setting" />
 
                         <p>FISH HAVEN, Idaho — It's an undiscovered paradise. Most people who drive by recognize the raw beauty of a place ringed by high desert mountains and bordered by the shores of a vast natural lake.</p>
                         <p>In winter the hills outside this small paradise echo with the sharp whine of snow machines and in the summer thousands of tourists ply the lake's bright blue waters with water skis or fishing poles.</p>
                         <p><a href="https://www.deseretnews.com/article/800677/Little-Fish-Haven-Idaho-is-paradise-for-residents.html">read the full article in the Idaho State Journal.</a></p>
-                        </div>
                     </div>
                 </article>
         </main>
