--- a/assignments/weathersite/gallery.html
+++ b/assignments/weathersite/gallery.html
@@ -48,15 +48,15 @@
                 </figure>            
                 <figure class="fig3">
                     <img src="images/Gallery_pexels-photo-236047.jpg" alt="storm clouds moving across field">
-                    <figcaption>Trouble is brewing...</figcaption> 
+                    <figcaption>Anonymous on Pexels</figcaption> 
                 </figure>
                 <figure class="fig4">
                     <img src="images/Gallery_alm-friuli-snow-snowfall-45204.jpg" alt="snowfall to cabin rooftop">
-                    <figcaption></figcaption> 
+                    <figcaption>Photo by Alm Fruili on Pixabay</figcaption> 
                 </figure>      
                 <figure class="fig5">
-                    <img src="https://unsplash.com/photos/GFFGe2eGmiM">
-                    <figcaption>Photo by Marko Blaxevic on Unsplash</figcaption> 
+                    <img src="images/marko-blazevic-313835-unsplash.jpg">
+                    <figcaption>Photo by Marko Blažević on Unsplash</figcaption> 
                 </figure>
                 <figure class="fig6">
                     <img src="images/Gallery_andrew-seaman-748643-unsplash.jpg" alt="tornado">
