--- a/assignments/weathersite/sodaSprings.html
+++ b/assignments/weathersite/sodaSprings.html
@@ -17,7 +17,7 @@
 
     </head>
 
-    <body onLoad="getWeather(5604473)">
+    <body onLoad="getWeather(5607916)">
         <!-- Specific to mobile devices -->
         <header class="clearfix heading">
             <img id="homeTown" src="images/WeekendWeatherImage.jpg" alt="aurora borealis">
@@ -43,7 +43,7 @@
             <h2>Soda Springs, Idaho</h2>
             <hr>
 
-                <img class="backgroundImage" src="images/Preston200.jpg" alt="green field with mountains and clouds in background" sizes="50vw" srcset="images/Preston500.jpg 500w, images/Preston800.jpg 800w, images/Preston1100.jpg 1100w">
+                <img class="backgroundImage" src="images/SodaSpring_page_yellowstone-66277_400.jpg" alt="black & white photo of geyser" sizes="50vw" srcset="images/SodaSpring_page_yellowstone-66277_400.jpg 400w, images/SodaSpring_page_yellowstone-66277_600.jpg 600w, images/SodaSpring_page_yellowstone-66277_1100.jpg 1100w">
   
                 <div class="format weatherSummaryBox">
                     <div class=townDiv>Weather Summary</div>
@@ -82,14 +82,12 @@
                         <h4>Soda Springs school district avoids fraud scam</h4>
                         <h5>By: Staff Writer</h5>
                         <h6><a href="https://www.localnews8.com/news/education/soda-springs-school-district-avoids-fraud-scam/994602748">KIDK 3/ KIFI / KXPI</a></h6>
-                        <div>
-                        <img id="imageArticle" src="images/pexels-photo-753619.jpg" alt="Blowing and drifting snow on roadway" />
+                        <img class="imgCircleBorder" src="images/SodaSprings_phone-449836_1920.jpg" alt="Scam with circle and diaganol line" />
                         <p>SODA SPRINGS, Idaho (KIFI/KIDK) - The Soda Springs School District reports it was targeted by a fraud similar to that which victimized the Teton School District in December.</p>
                         <p>Like Teton, the Soda Springs District is working with Headwaters Construction to build its Tigert Middle School gym and classroom additions.</p>
                         <p>Soda Springs personnel followed established protocol and did not wire any money and no Soda Springs funds were compromised. The district is now working with local law enforcement and the FBI.</p>
                         <p>Much like the Teton School District, District 150 received an e-mail on December 11, 2018 from what appeared to be a clerk from Headwaters Construction. The email requested the district to change its established payment practice of mailing monthly payment checks and switch to an electronic wire transfer.</p>
                         <p><a href="https://www.localnews8.com/news/education/soda-springs-school-district-avoids-fraud-scam/994602748">read full article ... at local news 8.com</a></p>
-                        </div>
                     </div>
                 </article>
         </main>
