--- a/assignments/weathersite/preston.html
+++ b/assignments/weathersite/preston.html
@@ -82,15 +82,13 @@
                         <h4>Food drive illustrates Scouts' impact</h4>
                         <h5>By Necia P. Seamons, Citizen editor</h5>
                         <h6><a href="https://www.hjnews.com/preston/news/food-drive-illustrates-scouts-impact/article_ea009cf2-4a64-11e9-83e6-03e53316e671.html">The Preston Citizen</a></h6>
-                        <div>
-                        <img id="imageArticle" src="images/pexels-photo-753619.jpg" alt="Blowing and drifting snow on roadway" />
+                        <img class="imgRoundBorder" src="images/clark-tibbs-367075-unsplash.jpg" alt="Do something good sign" />
 
                         <p>The food drive held Saturday illustrated the potential impact on the community that will come about with the end of the Church of Jesus Christ of Latter-day Saints’ sponsorship of the Boy Scouts of America program.</p>
                         <p>The current Franklin District in the Trapper Trails Scouting Council is expected to  shrink from 15,000 members to 5,000, said Bob Wright, a member of the district’s council.</p>
                         <p>The Trapper Trails Council currently has 15 districts, and will reorganize the Cache Valley area and Southestern Idaho area it covers into five districts, said Wright. </p>
                         <p>The Scout’s food drive provides food for 6-8 months for the Preston Community Food Pantry, said Wright. It is the center’s largest provider of donated foodstuffs, he said. </p>
                         <p>The US Postal Service holds an annual drive to help as well.</p>                        
-                        </div>
                     </div>
                 </article>
         </main>
