--- a/assignments/weathersite/gallery.html
+++ b/assignments/weathersite/gallery.html
@@ -55,7 +55,7 @@
                     <figcaption>Photo by Alm Fruili on Pixabay</figcaption> 
                 </figure>      
                 <figure class="fig5">
-                    <img src="images/marko-blazevic-313835-unsplash.jpg">
+                    <img src="images/marko-blazevic-313835-unsplash.jpg" alt="field of sunflowers with sun in background">
                     <figcaption>Photo by Marko Blažević on Unsplash</figcaption> 
                 </figure>
                 <figure class="fig6">
