--- a/assignments/weathersite/sodaSprings.html
+++ b/assignments/weathersite/sodaSprings.html
@@ -78,7 +78,7 @@
                     <div class="section3">
                         <h4>Soda Springs school district avoids fraud scam</h4>
                         <h5>By: Staff Writer</h5>
-                        <h6><a href="https://www.localnews8.com/news/education/soda-springs-school-district-avoids-fraud-scam/994602748">KIDK 3/ KIFI / KXPI</a></h6>
+                        <h6>KIDK 3/ KIFI / KXPI</h6>
                         <img class="imgCircleBorder" src="images/SodaSprings_phone-449836_1920.jpg" alt="Scam with circle and diaganol line" />
                         <p>SODA SPRINGS, Idaho (KIFI/KIDK) - The Soda Springs School District reports it was targeted by a fraud similar to that which victimized the Teton School District in December.</p>
                         <p>Like Teton, the Soda Springs District is working with Headwaters Construction to build its Tigert Middle School gym and classroom additions.</p>
