--- a/assignments/weathersite/index.html
+++ b/assignments/weathersite/index.html
@@ -17,7 +17,7 @@
     <body>
         <!-- Specific to mobile devices -->
         <header class="clearfix heading">
-            <img id="homeTown" src="images/WeekendWeatherImage.jpg" alt="beach">
+            <img id="homeTown" src="images/WeekendWeatherImage.jpg" alt="aurora borealis">
             <h1 class="siteHeading" style="color: #e7ecef">Weekend Warrior Weather</h1>
             <div class="motto"> "Climate is what we expect, weather is what we get." - Mark Twain</div>
         </header>
