--- a/assignments/weathersite/thanks.html
+++ b/assignments/weathersite/thanks.html
@@ -18,7 +18,7 @@
     <body onLoad="currentDate()">
         <!-- Specific to mobile devices -->
         <header class="clearfix heading">
-            <img id="homeTown" src="https://cdn1.iconfinder.com/data/icons/Futurosoft%20Icons%200.5.2/128x128/apps/keyboard_layout.png" alt="The world logo">
+            <img id="homeTown" src="images/WeekendWeatherImage.jpg" alt="aurora borealis">
             <h1 class="siteHeading" style="color: #e7ecef">Weekend Warrior Weather</h1>
             <div class="motto"> "Climate is what we expect, weather is what we get." - Mark Twain</div>
         </header>
