--- a/assignments/lesson-10/index.html
+++ b/assignments/lesson-10/index.html
@@ -3,15 +3,15 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Weekend Warrior Weather</title>
+        <title>Home Page | Temple Inn Suites</title>
 
         <!-- This the normalize.css file link that must be first before any other links!-->
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
 
         <!-- This is the link to the CSS file that will be used to format the css files-->
-        <link href="styles/small-10.css" type="text/css" rel="stylesheet" />
-        <link href="styles/medium-10.css" type="text/css" rel="stylesheet" />
-        <link href="styles/large-10.css" type="text/css" rel="stylesheet" />
+        <link href="styles/small.css" type="text/css" rel="stylesheet" />
+        <link href="styles/medium.css" type="text/css" rel="stylesheet" />
+        <link href="styles/large.css" type="text/css" rel="stylesheet" />
 
         <!-- This is the link to the icon imagees used. -->
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
@@ -30,13 +30,11 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li><a href="../../index.html">Assignment Listing Page</a></li>
-                <li><a class="active" href="#">Home</a></li>
-                <li><a href="preston.html">Preston</a></li>
-                <li><a href="#">Soda Springs</a></li>
-                <li><a href="#">Fish Haven</a></li>
-                <li><a href="storm-center.html">Storm Center</a></li>
-                <li><a href="gallery.html">Gallery</a></li>  
+                <li><a class="active" href="#">Home Page</a></li>
+                <li><a href="#">Temples</a></li>
+                <li><a href="#">Reservations</a></li>
+                <li><a href="#">Services</a></li>
+                <li><a href="#">Contact</a></li>
             </ul>
         </nav>
 
