term project update 1

--- a/assignments/term_Project/styleguide.html
+++ b/assignments/term_Project/styleguide.html
@@ -44,35 +44,35 @@
 		<section>	
 			<h2 class="styleguide">Branding</h2>
 			<h3 class="styleguide">Website Logo</h3>
-			<img class="centerIMG" src="images/TempleInnSuitesLogo" alt="Temple Inn & Suites Logo image"/>
+			<img class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="Temple Inn & Suites Logo image"/>
 			<h3 class="styleguide">Color Palette</h3>
 			<p class="styleguide">These colors were chosen to accenuate, highlight, and creat contrast for the site. </p>
 			<div id="color1" class="colorgroup">
-				<h4 class="styleguide">? NAME ?</h4>
+				<h4 class="styleguide">Bulgarian Rose</h4>
 				<p class="styleguide">#4F000B<br/>
 				RGB: 79 00 11 </p>
 				<div class="swatches" id="swatch1"></div>
 			</div>
 			<div id="color2" class="colorgroup">
-				<h4 class="styleguide">? NAME ?</h4>
+				<h4 class="styleguide">Alice Blue</h4>
 				<p class="styleguide">#F4FAFF<br/>
 				RGB: 244 250 255</p>
 				<div class="swatches" id="swatch2"></div>
 			</div>
 			<div id="color3" class="colorgroup">
-				<h4 class="styleguide">? NAME ?</h4>
+				<h4 class="styleguide">Charcoal</h4>
 				<p class="styleguide">#2E4057<br/>
 				RGB: 46 64 87</p>
 				<div class="swatches" id="swatch3"></div>
 			</div>
 			<div id="color4" class="colorgroup">
-				<h4 class="styleguide">? NAME ?</h4>
+				<h4 class="styleguide">Stil De Grain Yellow</h4>
 				<p class="styleguide">#F4D35E<br/>
 				RGB: 244 211 94</p>
 				<div class="swatches" id="swatch4"></div>
 			</div>
 			<div id="color5" class="colorgroup">
-				<h4 class="styleguide">? NAME ?</h4>
+				<h4 class="styleguide">Tumbleweed</h4>
 				<p class="styleguide">#E1AA7D<br/>
 				RGB: 225 170 125</p>
 				<div class="swatches" id="swatch5"></div>
