term project - update 2

--- a/assignments/term_Project/temple.html
+++ b/assignments/term_Project/temple.html
@@ -20,8 +20,11 @@
 
     <body onload="temple.js">
         <header id="swatch3" class="clearfix">
-            <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
-            <h1>Temple Inn & Suites</h1>
+            <div class="box">
+                <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
+            </div>
+
+        <!--   <h1 id="title">Temple Inn & Suites</h1>  --> 
             <div class="tagline"> "Providing services to those who provide services for others."</div>
         </header>
 
@@ -34,12 +37,13 @@
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contactus.html">Contact</a></li>
+                <li><a href="styleguide.html">Planning Document</a></li>
             </ul>
         </nav>
 
         <main>
 
-            <section></section>        
+            <section class="templePage"></section>        
         
         </main>
 
