--- a/assignments/term_Project/index.html
+++ b/assignments/term_Project/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-        <title>Temple Page | Temple Inn Suites</title>
+        <title>Home Page | Temple Inn Suites</title>
 
         <!-- This the normalize.css file link that must be first before any other links!-->
         <link href="styles/normalize.css" type="text/css" rel="stylesheet" />
@@ -20,8 +20,9 @@
 
     <body onload="getTempleInformation()">
         <header id="swatch3" class="clearfix">
-            <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo" alt="temple icon">
-            <h1>Temple Inn & Suites</h1>
+            <div class="box">
+                <img id="temple" class="centerIMG" src="images/TempleInnSuitesLogo.png" alt="temple icon">
+            </div>
             <div class="tagline"> "Providing services to those who provide services for others."</div>
         </header>
 
@@ -31,24 +32,22 @@
             <ul id="menuCenter" class="hide">
                 <li><a class="active" href="#">Home Page</a></li>
                 <li><a href="temples.html">Temples</a></li>
-                <li><a href="#">Reservations</a></li>
-                <li><a href="#">Services</a></li>
-                <li><a href="#">Contact</a></li>
+                <li><a href="reservations.html">Reservations</a></li>
+                <li><a href="services.html">Services</a></li>
+                <li><a href="contactus.html">Contact</a></li>
             </ul>
         </nav>
 
         <main>
-            <div id="templeImage">
-                <figure><img src="images/Temple_AnchorageAK_200.jpg" style="width: 50%" style="height: auto"></figure>
-                <figure><img src="images/Temple_BoiseID_200.jpg"style="width: 50%" style="height: auto"></figure>
-                <figure><img src="images/Temple_IdahoFallsID_200.jpg"style="width: 50%" style="height: auto"></figure>
-                <figure><img src="images/Temple_LaieHI_200.jpg"style="width: 50%" style="height: auto"></figure>
+            <div class="box">
+                <p>---------->  INSERT IMAGE OF TEMPLE  <--------------- </p>
             </div>
             <h1>Your home away from home.</h1>
             <p>It is our mission to ensure that our accomodations provide you with the comfort and convenience and are treated like you treat your guests. It is our pleasure to provide a quality specialized services to our guest for all their needs.</p>
 
             
             <button class="ctaButton" name="callToAction" type="button" onclick="openForm">Join our rewards program and get a <em>free</em> night.</button>
+
         </main>
 
         <address  onLoad="currentDate()" >
