term project update 4

--- a/assignments/term_Project/index.html
+++ b/assignments/term_Project/index.html
@@ -30,7 +30,7 @@
             <button onclick="toggleMenu()"> &equiv; </button>
             
             <ul id="menuCenter" class="hide">
-                <li><a class="active" href="#">Home Page</a></li>
+                <li><a class="active" href="index.html">Home Page</a></li>
                 <li><a href="temples.html">Temples</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="services.html">Services</a></li>
