--- a/assignments/term_Project/temple.html
+++ b/assignments/term_Project/temple.html
@@ -37,7 +37,6 @@
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contactus.html">Contact</a></li>
-                <li><a href="styleguide.html">Planning Document</a></li>
             </ul>
         </nav>
 
@@ -64,6 +63,12 @@
         </address>
 
         <footer>
+            <div>
+                <ul>
+                    <li><a href="styleguide.html">Planning Document</a></li>
+                    <li><a href="citereferences.html">Cite References</a></li>
+                </ul>
+            </div>
             &copy; 2019 - Cindy Jorgensen - Location: Alaska -<a href="http://www.byui.edu/online">BYU-Idaho Online Learning</a>
             <div id="date"></div>
         </footer>
