--- a/assignments/term_Project/reservations.html
+++ b/assignments/term_Project/reservations.html
@@ -31,9 +31,9 @@
         <button onclick="toggleMenu()"> &equiv; </button>
 
         <ul id="menuCenter" class="hide">
-            <li><a class="active" href="#">Home Page</a></li>
+            <li><a  href="index.html">Home Page</a></li>
             <li><a href="temples.html">Temples</a></li>
-            <li><a href="reservations.html">Reservations</a></li>
+            <li><a class="active" href="reservations.html">Reservations</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="contactus.html">Contact</a></li>
         </ul>
