--- a/assignments/termProject/index.html
+++ b/assignments/termProject/index.html
@@ -31,7 +31,7 @@
             
             <ul id="menuCenter" class="hide">
                 <li><a class="active" href="index.html">Home Page</a></li>
-                <li><a href="temples.html">Temples</a></li>
+                <li><a href="temple.html">Temples</a></li>
                 <li><a href="reservations.html">Reservations</a></li>
                 <li><a href="services.html">Services</a></li>
                 <li><a href="contactus.html">Contact</a></li>
