--- a/assignments/termProject/reservations.html
+++ b/assignments/termProject/reservations.html
@@ -26,18 +26,21 @@
         </div>
         <div class="tagline"> "Providing services to those who provide services for others."</div>
     </header>
-
-    <nav id="mainnav" class="clearfix">
-        <button onclick="toggleMenu()"> &equiv; </button>
-
-        <ul id="menuCenter" class="hide">
-            <li><a  href="index.html">Home Page</a></li>
-            <li><a href="temples.html">Temples</a></li>
-            <li><a class="active" href="reservations.html">Reservations</a></li>
-            <li><a href="services.html">Services</a></li>
-            <li><a href="contactus.html">Contact</a></li>
-        </ul>
-    </nav>
+    <div id="myTopNav" class="navbar">
+        <a href="index.html">Home Page</a>
+        <a href="temple.html">Temples</a>
+        <a href="reservations.html">Reservations</a>
+        <div class="dropdown">
+            <button class="dropbtn">Services<i class="fa fa-caret-down"></i></button>
+                <div class="dropdown-Content">
+                    <a href="services.html">Services</a>
+                    <a href="reception.html">Reception</a>
+                    <a class="active" href="fullTimeTempleMissionary.html">Full-Time Temple Missonary</a>
+                </div>
+            </div>  
+        <a href="contactus.html">Contact</a>
+        <a href="javascript:void(0);" class="icon" onclick="myFunction()">&#9776;</a>
+    </div>
 
     <main class="clearfix clear">
         <h1 class="centerText">Reservations</h1>
